k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: andina-seguros
  labels:
    app.kubernetes.io/part-of: andina-seguros
