k8s/23-service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: andina-seguros
  labels:
    app: backend
spec:
  type: ClusterIP # sin acceso directo desde fuera del cluster; solo el gateway lo llama
  selector:
    app: backend
  ports:
    - name: http
      port: 8080
      targetPort: http
